--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "@supabase/supabase-js": "^2.10.0",
+    "date-fns": "^2.29.3",
     "expo": "~48.0.5",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
@@ -24,6 +26,7 @@
     "react-hook-form": "^7.43.5",
     "react-native": "0.71.3",
     "react-native-get-random-values": "^1.8.0",
+    "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
