--- a/package.json
+++ b/package.json
@@ -22,18 +22,20 @@
     "date-fns": "^2.29.3",
     "expo": "~48.0.5",
     "expo-font": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-hook-form": "^7.43.5",
     "react-native": "0.71.3",
+    "react-native-document-picker": "^8.1.3",
     "react-native-get-random-values": "^1.8.0",
     "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-url-polyfill": "^1.3.0",
-    "yup": "^1.0.2",
-    "expo-linear-gradient": "~12.1.2"
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
