--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.71.3",
     "react-native-document-picker": "^8.1.3",
     "react-native-get-random-values": "^1.8.0",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
