--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-url-polyfill": "^1.3.0",
-    "yup": "^1.0.2"
+    "yup": "^1.0.2",
+    "expo-location": "~15.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
